java 17 PoC