@@ -7,6 +7,8 @@ plugins {
 	// ^^ for some reason, can't use spotless in multiple subprojects without this ^^
 	id 'com.google.cloud.tools.jib' version '3.1.4' apply false
 	// ^^ see https://github.com/GoogleContainerTools/jib/blob/master/docs/faq.md#i-am-seeing-method-not-found-or-class-not-found-errors-when-building
+	id 'io.freefair.lombok' version '6.4.1' apply false
+	id 'org.hidetake.swagger.generator' version '2.19.2' apply false
 }
 
 repositories { mavenCentral() }
@@ -31,6 +33,10 @@ subprojects {
 			dependency 'io.swagger.codegen.v3:swagger-codegen-cli:3.0.33'
 		}
 	}
+
+	tasks.withType(org.hidetake.gradle.swagger.generator.GenerateSwaggerCode).all {
+		jvmArgs = ['--add-opens=java.base/java.util=ALL-UNNAMED'] // for jvm 16+
+	}
 }
 
-idea.project.jdkName = '11'
+idea.project.jdkName = '17'
